Horizontal scroll-bar bug fixed

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -6,8 +6,7 @@ body {
   font-family: sans-serif;
   /* background-color: lightgoldenrodyellow; */
   background-color: white;
-  margin: 0;
-  padding: 0;
+  overflow-x: hidden;
 }
 
 /* width */
